refactor: JpaRepository를 사용하게 변경